[gd_scene load_steps=8 format=3 uid="uid://clho752qmj2te"]

[ext_resource type="Theme" uid="uid://dnk8htb63eidw" path="res://assets/ui/MobileTheme.tres" id="1_h2djh"]
[ext_resource type="Script" path="res://game/profile_menu/ProfileScreen.gd" id="2_7jonu"]
[ext_resource type="PackedScene" uid="uid://yopd6eyct7hx" path="res://game/mobile/MobileBGHelp.tscn" id="2_hi2l4"]
[ext_resource type="PackedScene" uid="uid://cawa5v06l83m5" path="res://game/profile_menu/ProfileButtonMobile.tscn" id="3_mfbmt"]
[ext_resource type="Texture2D" uid="uid://c5lle40115ifn" path="res://assets/images/ui/icons/double-fish.png" id="4_qso1h"]
[ext_resource type="Texture2D" uid="uid://2oksbkw01gll" path="res://assets/images/ui/icons/turtle.png" id="5_o75oy"]
[ext_resource type="Texture2D" uid="uid://dbm5kpqt3p0hu" path="res://assets/images/ui/icons/shrimp.png" id="6_741er"]

[node name="ProfileScreenMobile" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0
theme = ExtResource("1_h2djh")
script = ExtResource("2_7jonu")

[node name="MobileBGHelp" parent="." instance=ExtResource("2_hi2l4")]
layout_mode = 0

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
offset_left = 50.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 100.0
focus_mode = 0
text = "BACK"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 100
theme_override_font_sizes/font_size = 70
text = "CHANGE_PROFILE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
theme_override_constants/separation = 60
alignment = 1

[node name="Fish" parent="VBoxContainer" instance=ExtResource("3_mfbmt")]
unique_name_in_owner = true
layout_mode = 2
profile_name = "fish"

[node name="SelectButton" parent="VBoxContainer/Fish/HBoxContainer" index="0"]
icon = ExtResource("4_qso1h")

[node name="Turtle" parent="VBoxContainer" instance=ExtResource("3_mfbmt")]
layout_mode = 2
profile_name = "turtle"

[node name="SelectButton" parent="VBoxContainer/Turtle/HBoxContainer" index="0"]
icon = ExtResource("5_o75oy")

[node name="Shrimp" parent="VBoxContainer" instance=ExtResource("3_mfbmt")]
layout_mode = 2
profile_name = "shrimp"

[node name="SelectButton" parent="VBoxContainer/Shrimp/HBoxContainer" index="0"]
icon = ExtResource("6_741er")

[connection signal="mouse_entered" from="BackButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="delete" from="VBoxContainer/Fish" to="." method="delete_profile"]
[connection signal="select" from="VBoxContainer/Fish" to="." method="select_profile"]
[connection signal="delete" from="VBoxContainer/Turtle" to="." method="delete_profile"]
[connection signal="select" from="VBoxContainer/Turtle" to="." method="select_profile"]
[connection signal="delete" from="VBoxContainer/Shrimp" to="." method="delete_profile"]
[connection signal="select" from="VBoxContainer/Shrimp" to="." method="select_profile"]

[editable path="VBoxContainer/Fish"]
[editable path="VBoxContainer/Turtle"]
[editable path="VBoxContainer/Shrimp"]
